[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "praw>=7.8.1",
    "pytrends>=4.9.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.1",
    "textblob>=0.19.0",
    "tweepy>=4.16.0",
    "yfinance>=0.2.64",
]
